k8s-spec/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: k8-demo
  name: k8-demo
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: k8-demo
  template:
    metadata:
      labels:
        app: k8-demo
    spec:
      containers:
        - name: k8-demo
          image: k8-demo:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
