k8s-spec/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8-service
spec:
  selector:
    app: k8-demo
  ports:
  - port: 80
    targetPort: 3000
  type: LoadBalancer
