k8s-spec/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: some-host
      http:
        paths:
          - path: /pre/admin
            pathType: Prefix
            backend:
              service:
                name: k8-service
                port:
                  number: 80
